<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41cee0"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/headerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp">

            <LinearLayout
                android:id="@+id/linearLayoutImText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:contentDescription="@string/bookheader"
                    android:padding="5sp"
                    android:src="@drawable/duckbook" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingTop="25sp"
                    android:text="@string/classic_vintage_books"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <GridLayout
            android:id="@+id/bookGridLayout"
            android:layout_width="match_parent"
            android:layout_height="537dp"
            android:layout_marginTop="10sp"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:minHeight="1300dp"
            android:padding="14dp"
            android:rowCount="6">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:contentDescription="@string/anne"
                    android:focusable="true"
                    android:src="@drawable/anne" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:contentDescription="@string/blackbeauty"
                    android:focusable="true"
                    android:src="@drawable/bb" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/hatchet"
                    android:focusable="true"
                    android:src="@drawable/hatchet" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/lionwitchwardrobe"
                    android:focusable="true"
                    android:src="@drawable/lion" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/littlewomen"
                    android:focusable="true"
                    android:src="@drawable/littlew" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/marypoppins"
                    android:focusable="true"
                    android:src="@drawable/maryp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/wizardofoz"
                    android:focusable="true"
                    android:src="@drawable/oz" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView8"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/peterpan"
                    android:focusable="true"
                    android:src="@drawable/peter" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView9"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/pippilongstalking"
                    android:focusable="true"
                    android:src="@drawable/pippi" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView10"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/redferngrows"
                    android:focusable="true"
                    android:src="@drawable/redf" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView11"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book11"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/secretgarden"
                    android:focusable="true"
                    android:src="@drawable/secretg" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView12"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8C57EA"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/book12"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:contentDescription="@string/wildheartcannotbebroken"
                    android:focusable="true"
                    android:src="@drawable/wildh" />
            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>
</ScrollView>


