<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#41cee0"
    tools:context=".orderbooks">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayoutOrderVert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlayoutOrderPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#41cee0"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardviewOrderPageHeader"
                    android:layout_width="match_parent"
                    android:layout_height="91dp">

                    <LinearLayout
                        android:id="@+id/linearLayoutImText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewOrder"
                            android:layout_width="100sp"
                            android:layout_height="100sp"
                            android:contentDescription="@string/bookheader"
                            android:padding="5sp"
                            android:src="@drawable/duckbook" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:paddingTop="25sp"
                            android:text="@string/classic_vintage_books"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="28sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardviewOrder"
                    android:layout_width="347dp"
                    android:layout_height="81dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="25sp">

                    <ImageView
                        android:id="@+id/imageViewOrder2"
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:contentDescription="@string/anneorder"
                        android:padding="5sp"
                        android:src="@drawable/anne"
                        tools:srcCompat="@drawable/anne" />

                    <CheckBox
                        android:id="@+id/textView3"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right|center_horizontal"
                        android:paddingTop="0sp"
                        android:text="Add to Order"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonConfirmOrder"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:text="@string/confirm_order"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
